# data-science-keras

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NLP_machine_translation.ipynb  README.md  bike_rental.ipynb  bike_sharing.ipynb  enron_scandal.ipynb  helper.py  helper_ds.py  helper_ml.py  house_prices.ipynb  machine_translation.ipynb  network.ipynb  property_maintenance_fines.ipynb  pyproject.toml  requirements-dev.txt  requirements-stable.txt  requirements.txt  sentiment_IMDB.ipynb  setup.cfg  setup.py  simple_stock_prediction.ipynb  simple_tickets.ipynb  spam_detector.ipynb  student_admissions.ipynb  styleguide.md  text_generator.ipynb  titanic.ipynb  titanic_project_DNN.ipynb  ztest.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.ipynb_checkpoints/: property_maintenance_fines-checkpoint.ipynb
data/: alphabet_stock.csv  simple_tickets_data.csv
models/: bike_rental.h5  bike_sharing.h5  enron_scandal.h5  house_prices.h5  sentiment_IMDB_model.h5  simple_stock_prediction.h5  simple_tickets.h5  student_admissions.h5  test.h5  text_generator.h5  titanic.h5
notebooks/: bike_rental.ipynb  enron_scandal.ipynb  house_prices.ipynb  machine_translation.ipynb  network.ipynb  property_maintenance_fines.ipynb  sentiment_IMDB.ipynb  simple_stock_prediction.ipynb  simple_tickets.ipynb  spam_detector.ipynb  student_admissions.ipynb  text_generator.ipynb  titanic.ipynb  ztest.ipynb
src/ds_boost/: __init__.py  ds_boost.py  (+1 more)
src/ds_boost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_ds_boost.py
