[metadata]
name = ds_boost
version = 0.0.1
author =  Angel Martinez-Tenor
author_email = angelmtenor@gmail.com
license=MIT
url = ""
description = Package for Practical & efficient Data Science in Python. Initially written for data-science-keras repo
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = practical data science, machine learning, deep learning, keras, tensorflow, pytorch, pandas, numpy, matplotlib, seaborn, scikit-learn, jupyter, python
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.8
package_dir=
    =src
packages = find:
# zip_safe = True
include_package_data = True
install_requires = file: requirements.txt

[options.packages.find]
exclude = tests

[options.entry_points]

[options.extras_require]
# dev = file: requirements-dev.txt

[options.package_data]
